# Calibration_pointing

./: README.md
openpose_ros/: CMakeLists.txt  package.xml
openpose_ros/config/: calibration_pointing.rviz  detect_poses.rviz
openpose_ros/include/: openpose_ros_io.h
openpose_ros/include/test/: icp_cut.h
openpose_ros/include/test/impl/: icp_cut.hpp
openpose_ros/launch/: calibration_pointing.launch  calibration_pointing_sim.launch  openpose_ros.launch  openpose_ros_sim.launch
openpose_ros/scripts/: calibration_poses.py  neutral.py
openpose_ros/src/: calibrate_action.cpp  calibration_pointing.cpp  detect_poses.cpp  openpose.cpp  openpose_flags.cpp  openpose_ros_io.cpp  tabletop_trash.cpp  tf_publisher.cpp
